helix/.config/helix/runtime/grammars/sources/ld/test/corpus/corpus.txt
=====================
statement in section
=====================

/* Default linker script, for normal executables.  */
OUTPUT_FORMAT("elf32-littlearc", "elf32-bigarc",
              "elf32-littlearc")

OUTPUT_ARCH(arc)
ENTRY(__start)

SECTIONS
{
  /* Read-only sections, merged into text segment: */
  PROVIDE (__start = 0x10000);
  . = 0x10000 + SIZEOF_HEADERS;

  .text           : {*(.text .stub .text.*)} =0
  .tdata          : {.tdata = .; *(.tdata .tdata.* .gnu.linkonce.td.*) }
}

---

(script_file
  (comment)
  (ifile_p1
    (NAME)
    (NAME)
    (NAME))
  (ifile_p1
    (NAME))
  (ifile_p1
    (statement_anywhere
      (NAME)))
  (ifile_p1
    (sections
      (comment)
      (sec_or_group_p1
        (statement_anywhere
          (assignment
            (NAME)
            (mustbe_exp
              (exp
                (INT))))
          (separator))
        (statement_anywhere
          (assignment
            (NAME)
            (mustbe_exp
              (exp
                (exp
                  (INT))
                (exp))))
          (separator))
        (section
          (NAME)
          (opt_exp_with_type)
          (statement_list
            (statement
              (input_section_spec
                (input_section_spec_no_keep
                  (filename_spec
                    (wildcard_maybe_reverse
                      (wildcard_maybe_exclude
                        (wildcard_name))))
                  (section_name_list
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name))))
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name))))
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name)))))))))
          (fill_exp
            (mustbe_exp
              (exp
                (INT)))))
        (section
          (NAME)
          (opt_exp_with_type)
          (statement_list
            (statement
              (assignment
                (NAME)
                (mustbe_exp
                  (exp
                    (SYMBOLNAME))))
              (separator))
            (statement
              (input_section_spec
                (input_section_spec_no_keep
                  (filename_spec
                    (wildcard_maybe_reverse
                      (wildcard_maybe_exclude
                        (wildcard_name))))
                  (section_name_list
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name))))
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name))))
                    (section_name_spec
                      (wildcard_maybe_reverse
                        (wildcard_maybe_exclude
                          (wildcard_name))))))))))))))
